--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/cassia1102/CreditCardFraudDetection">Credi Card Frauld Detection<br />
+										<h2><a href="https://github.com/cassia1102/CreditCardFraudDetection">Credit Card Fraud Detection<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/cassia1102/CreditCardFraudDetection" class="image fit"><img src="images/credit_card.jpg" alt="" /></a>
@@ -148,13 +148,7 @@
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									
 								</div>
 							</footer>
 
