--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<div id="intro">
 						<h1>HI! I'M CASSIA<br />
 						</h1>
-						<p>Data Analyst Skilled in SQL, Tableau, Power BI and Python <a href="https://github.com/cassia1102">@Cassia Guo</a>
+						<p>A data-driven professional with hands-on expertise in data analysis, project coordination, and stakeholder engagement
+							<a href="https://github.com/cassia1102">@Cassia Guo</a>
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
