--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Cassia The Analyst Portfolio</title>
+		<title>Ping Zhang The Software Engineer Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,16 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>HI! I'M CASSIA<br />
+						<h1>HI! I'M Ping Zhang<br />
 						</h1>
-						<p>A data-driven professional with hands-on expertise in data analysis, project coordination, and stakeholder engagement
-							<a href="https://github.com/cassia1102">@Cassia Guo</a>
+						<p>A Software Engineer professional with hands-on expertise in software development, data analysis, and project mamagement 
+							<a href="https://github.com/pingzhang1004">@pingzhang1004</a>
+						</p>
+						<p> Technical Skills : 
+							Languages: Python,Java, C/C++,  JavaScript, HTML, CSS, SQL, C#
+							Databases: Oracle, Microsoft SQL Server, SQLite, MongoDB
+							Development tools:  React, VS Code, Eclipse IDE, .Net, Node.js, Jupyter Notebook, Git, JUnit
+							Professional : project management, team management, technical writings, dataset management , Oral-presentation 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -42,8 +48,8 @@
 						</ul>
 						<ul class="icons">
 							
-							<li><a href="https://www.linkedin.com/in/juan-cassia-guo-08190a140/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/cassia1102" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ping-zhang-3aba64266/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/pingzhang1004" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -58,13 +64,15 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/cassia1102/DataCleaninginSQL">Data Cleaning in SQL<br />
+									<h2><a href="https://github.com/pingzhang1004/ClueGame">Clue Game in Java<br />
 									</a></h2>
-									<p>In this project I take raw housing data and transform it in SQL Server to make it more usable for analysis.</p>
+									<p>Developed a clue game using Java, 
+									   following the SOLID Principles of Object-Oriented design,
+									   and utilized the Unified Modeling Language (UML) to clarify and display the software design </p>
 								</header>
-								<a href="https://github.com/cassia1102/DataCleaninginSQL" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="https://github.com/pingzhang1004/ClueGame" class="image main"><img src="images/ClueGame.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/cassia1102/DataCleaninginSQL" class="button large">VIEW PROJECT</a></li>
+									<li><a href="https://github.com/pingzhang1004/ClueGame" class="button large">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 
