--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 						<p>A Software Engineer professional with hands-on expertise in software development, data analysis, and project mamagement 
 							<a href="https://github.com/pingzhang1004">@pingzhang1004</a>
 						</p>
-						<p> Technical Skills : 
-							Languages: Python,Java, C/C++,  JavaScript, HTML, CSS, SQL, C#
-							Databases: Oracle, Microsoft SQL Server, SQLite, MongoDB
-							Development tools:  React, VS Code, Eclipse IDE, .Net, Node.js, Jupyter Notebook, Git, JUnit
-							Professional : project management, team management, technical writings, dataset management , Oral-presentation 
+						<p> Technical Skills : </p>
+							<p> Languages: Python,Java, C/C++,  JavaScript, HTML, CSS, SQL, C#  </p>
+							<p> Databases: Oracle, Microsoft SQL Server, SQLite, MongoDB </p>
+							<p> Development tools:  React, VS Code, Eclipse IDE, .Net, Node.js, Jupyter Notebook, Git, JUnit </p>
+						<p> Professional Skills: project management, team management, technical writings, dataset management , Oral-presentation  </p>
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
