--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 						<p> Languages: Python,Java, C/C++,  JavaScript, HTML, CSS, SQL, C#  </p>
 						<p> Databases: Oracle, Microsoft SQL Server, SQLite, MongoDB </p>
 						<p> Development tools:  React, VS Code, Eclipse IDE, .Net, Node.js, Jupyter Notebook, Git, JUnit </p>
-						<p> Professional Skills: project management, team management, technical writings, dataset management , Oral-presentation </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -63,9 +62,9 @@
 									
 									<h2><a href="https://github.com/pingzhang1004/ClueGame">Clue Game in Java<br />
 									</a></h2>
-									<p>Developed a clue game using Java, 
-									   following the SOLID Principles of Object-Oriented design,
-									   and utilized the Unified Modeling Language (UML) to clarify and display the software design </p>
+									<p> Developed a clue game using Java, following the SOLID Principles of Object-Oriented design,
+									and utilized the Unified Modeling Language (UML) to clarify and display the software design.
+									</p>
 								</header>
 								<a href="https://github.com/pingzhang1004/ClueGame" class="image main"><img src="images/ClueGame.jpg" alt="" /></a>
 								<ul class="actions special">
