--- a/index.html
+++ b/index.html
@@ -77,13 +77,17 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/cassia1102/DataExplorationInSQL">Data Exploration in SQL<br />
+										<h2><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator">Operating System Simulator<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/cassia1102/DataExplorationInSQL" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
-									<p>In this project I use SQL Server to explore global COVID 19 data.</p>
+									<a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
+									<p>Implemented Operating System Simulator using C/C++：</p>
+                                                                        <p> 1. UNIX-like bash shell：https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell. </p>
+                                                                        <p> 2. Multiple threads computation：https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip. </p>
+                                                                        <p> 3. CPU scheduling Simulator：https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator. </p>
+                                                                        <p> 4.  Memory management Simulator: https://github.com/pingzhang1004/CSCI-442-Project-5-Memory-Management. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/cassia1102/DataExplorationInSQL" class="button">VIEW PROJECT</a></li>
+										<li><a href=https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
