--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<h2><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator">Operating System Simulator<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
+									<a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator" class="image fit"><img src="images/OperatingSystem.jpg" alt="" /></a>
 									<p>Implemented Operating System Simulator using C/C++：</p>
                                                                         <p> 1. UNIX-like bash shell：https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell. </p>
                                                                         <p> 2. Multiple threads computation：https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip. </p>
