--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/pingzhang1004/ClueGame">Clue Game in Java<br />
+									<h2><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator"> Operating System Simulator <br />
 									</a></h2>
-									<p> Developed a clue game using Java, following the SOLID Principles of Object-Oriented design,
-									and utilized the Unified Modeling Language (UML) to clarify and display the software design.
-									</p>
+									<p>Implemented Operating System Simulator using C/C++：</p>
+                                                                        <p> 1. UNIX-like bash shell：https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell. </p>
+                                                                        <p> 2. Multiple threads computation：https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip. </p>
+                                                                        <p> 3. CPU scheduling Simulator：https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator. </p>
+                                                                        <p> 4.  Memory management Simulator: https://github.com/pingzhang1004/CSCI-442-Project-5-Memory-Management. </p>
 								</header>
-								<a href="https://github.com/pingzhang1004/ClueGame" class="image main"><img src="images/ClueGame.jpg" alt="" /></a>
+								<a href=" Operating System Simulator " class="image main"><img src="images/OperatingSystem.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/pingzhang1004/ClueGame" class="button large">VIEW PROJECT</a></li>
+									<li><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator" class="button large">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 
@@ -77,17 +79,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator">Operating System Simulator<br />
+										<h2><a href="https://github.com/pingzhang1004/ClueGame">Clue Game<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator" class="image fit"><img src="images/OperatingSystem.jpg" alt="" /></a>
-									<p>Implemented Operating System Simulator using C/C++：</p>
-                                                                        <p> 1. UNIX-like bash shell：https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell. </p>
-                                                                        <p> 2. Multiple threads computation：https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip. </p>
-                                                                        <p> 3. CPU scheduling Simulator：https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator. </p>
-                                                                        <p> 4.  Memory management Simulator: https://github.com/pingzhang1004/CSCI-442-Project-5-Memory-Management. </p>
+									<a href="https://github.com/pingzhang1004/ClueGame" class="image fit"><img src="images/ClueGmae.jpg" alt="" /></a>
+									<p>Developed a clue game using Java, following the SOLID Principles of Object-Oriented design, and utilized the Unified Modeling Language (UML) to clarify and display the software design.</p>
 									<ul class="actions special">
-										<li><a href=https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/ClueGame" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
