--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 									<h2><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator"> Operating System Simulator <br />
 									</a></h2>
 									<p>Implemented Operating System Simulator using C/C++：</p>
-                                                                        <p> 1. UNIX-like bash shell：https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell. </p>
-                                                                        <p> 2. Multiple threads computation：https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip. </p>
-                                                                        <p> 3. CPU scheduling Simulator：https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator. </p>
-                                                                        <p> 4.  Memory management Simulator: https://github.com/pingzhang1004/CSCI-442-Project-5-Memory-Management. </p>
+                                                                        <p> 1. UNIX-like bash shell： href="https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell". </p>
+                                                                        <p> 2. Multiple threads computation： href="https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip". </p>
+                                                                        <p> 3. CPU scheduling Simulator： href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator". </p>
+                                                                        <p> 4. Memory management Simulator:  href="https://github.com/pingzhang1004/CSCI-442-Project-5-Memory-Management". </p>
 								</header>
 								<a href=" Operating System Simulator " class="image main"><img src="images/OperatingSystem.jpg" alt="" /></a>
 								<ul class="actions special">
