--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<h2><a href="https://github.com/pingzhang1004/ClueGame">Clue Game<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/pingzhang1004/ClueGame" class="image fit"><img src="images/ClueGmae.jpg" alt="" /></a>
+									<a href="https://github.com/pingzhang1004/ClueGame" class="image fit"><img src="images/ClueGame.jpg" alt="" /></a>
 									<p>Developed a clue game using Java, following the SOLID Principles of Object-Oriented design, and utilized the Unified Modeling Language (UML) to clarify and display the software design.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/ClueGame" class="button">VIEW PROJECT</a></li>
