--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 									<h2><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator"> Operating System Simulator <br />
 									</a></h2>
 									<p>Implemented Operating System Simulator using C/C++：</p>
-                                                                        <a href="https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell"> 1. UNIX-like bash shell </a>
+									<p> 1. UNIX-like bash shell --->
+                                                                        <a href="https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell"> Link </a>
+									</p>	
                                                                         <a href="https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip"> 2. Multiple threads computation </a> <br />
                                                                         <a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator"> 3. CPU scheduling Simulator </a>
                                                                         <a href="https://github.com/pingzhang1004/CSCI-442-Project-5-Memory-Management">> 4. Memory management Simulator </a> <br />
