--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
 									
 									<h2><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator"> Operating System Simulator <br />
 									</a></h2>
-									<p>Implemented Operating System Simulator using C/C++：</p>
+									<p> Implemented Operating System Simulator using C/C++：</p>
 									<p> 1. UNIX-like bash shell --->
                                                                         <a href="https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell"> Link </a>
-									</p>	
-                                                                        <a href="https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip"> 2. Multiple threads computation </a> <br />
-                                                                        <a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator"> 3. CPU scheduling Simulator </a>
-                                                                        <a href="https://github.com/pingzhang1004/CSCI-442-Project-5-Memory-Management">> 4. Memory management Simulator </a> <br />
+									</p>
+									<p> 2. Multiple threads computation --->
+                                                                        <a href="https://github.com/pingzhang1004/CSCI-442-Project-3-Parallel-Zip"> Link </a>
+                                                                        </p>
+									<p> 3. CPU scheduling Simulator --->
+									<a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator"> Link </a>
+                                                                        </p>
+									<p> 4. Memory management Simulator ---> 
+									<a href="https://github.com/pingzhang1004/CSCI-442-Project-5-Memory-Management"> Link </a>
+								        </p>
 								</header>
 								<a href=" Operating System Simulator " class="image main"><img src="images/OperatingSystem.jpg" alt="" /></a>
 								<ul class="actions special">
