--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									
 									<h2><a href="https://github.com/pingzhang1004/CSCI-442-Project-4-CPU-Scheduling-Simulator"> Operating System Simulator <br />
 									</a></h2>
-									<p> Implemented Operating System Simulator using C/C++：</p>
+									<p> Implemented A Operating System Simulator using C/C++：</p>
 									<p> 1. UNIX-like bash shell --->
                                                                         <a href="https://github.com/pingzhang1004/CSCI-442-Project-2-UNIX-Shell"> Link </a>
 									</p>
