--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://public.tableau.com/app/profile/cassia.guo">TABLEAU DASHBOARDS<br />
+										<h2><a href="https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze"> Space Wreck Graph <br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/cassia.guo" class="image fit"><img src="images/dashboard_01.jpg" alt="" /></a>
-									<p>Tableau Dashboards for projects on Financial Complaints, Customer Analysis, COVID 19, and Real Estate Market.</p>
+									<a href="https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze" class="image fit"><img src="images/MadMaze.jpg" alt="" /></a>
+									<p> Modeled a compesity maze problem as a graph and use Breadth First Search(BFS) to find the shortest path on the graph using Python.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/cassia.guo" class="button">VIEW PROJECTS</a></li>
+										<li><a https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze" class="button">VIEW PROJECTS</a></li>
 									</ul>
 								</article>
 								<article>
