--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										<h2><a href="https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze"> Space Wreck Graph <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze" class="image fit"><img src="images/MadMaze.jpg" alt="" /></a>
+									<a href="https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze" class="image fit"><img src="images/MadMaze.png" alt="" /></a>
 									<p> Modeled a compesity maze problem as a graph and use Breadth First Search(BFS) to find the shortest path on the graph using Python.</p>
 									<ul class="actions special">
 										<li><a https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze" class="button">VIEW PROJECTS</a></li>
