--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/cassia1102/CreditCardFraudDetection">Credit Card Fraud Detection<br />
+										<h2><a href="https://github.com/cassia1102/CreditCardFraudDetection">Timber Problem Dynamic Programming<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/cassia1102/CreditCardFraudDetection" class="image fit"><img src="images/credit_card.jpg" alt="" /></a>
-									<p> Build machine learning models for credit card fraud dtection.</p>
+									<a href="https://github.com/cassia1102/CreditCardFraudDetection" class="image fit"><img src="images/DynamicProgramming.png" alt="" /></a>
+									<p> Implement a dynamic programming algorithm to compute the maximum sum of lengths of wood that can be achieved by strategy, and compared the Runtime of the recursive algorithm and dynamic programming algorithm, and analyed Algorithms Complexity.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/cassia1102/CreditCardFraudDetection" class="button">VIEW PROJECT</a></li>
 									</ul>
