--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/cassia1102/CreditCardFraudDetection">Timber Problem Dynamic Programming<br />
+										<h2><a href="https://github.com/pingzhang1004/CSCI406-DP-Timber-Problem">Timber Problem Dynamic Programming<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/cassia1102/CreditCardFraudDetection" class="image fit"><img src="images/DynamicProgramming.png" alt="" /></a>
-									<p> Implement a dynamic programming algorithm to compute the maximum sum of lengths of wood that can be achieved by strategy, and compared the Runtime of the recursive algorithm and dynamic programming algorithm, and analyed Algorithms Complexity.</p>
+									<a href="https://github.com/pingzhang1004/CSCI406-DP-Timber-Problem" class="image fit"><img src="images/DynamicProgramming.png" alt="" /></a>
+									<p> Implement a dynamic programming algorithm to compute the maximum sum of lengths of wood that can be achieved by a strategy. Analyze the algorithms' complexity of the dynamic algorithm with that of the recursive algorithm.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/cassia1102/CreditCardFraudDetection" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/CSCI406-DP-Timber-Problem" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
