--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/cassia1102/TopicDetection">Topic detection of customer review on smart home appliances using web mining.<br />
+										<h2><a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale">Big Mart Sale <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/cassia1102/TopicDetection" class="image fit"><img src="images/topicmodeling.jpg" alt="" /></a>
-									<p>Customers review analysis on Tineco Smart Wet/Dry Vacuum Cleaner.</p>
+									<a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale" class="image fit"><img src="images/BigMartSale.png.jpg" alt="" /></a>
+									<p> Employed the Machine Learning Scikit-learn library to perform model selection, and identified key features influencing sales.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/cassia1102/TopicDetection" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
