--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/CSCI406-DP-Timber-Problem" class="image fit"><img src="images/DynamicProgramming.png" alt="" /></a>
-									<p> Implement a dynamic programming algorithm to compute the maximum sum of lengths of wood that can be achieved by a strategy. Analyze the algorithms' complexity of the dynamic algorithm with that of the recursive algorithm.</p>
+									<p> Implemented a dynamic programming algorithm to compute the maximum sum of lengths of wood that can be achieved by a strategy.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/CSCI406-DP-Timber-Problem" class="button">VIEW PROJECT</a></li>
 									</ul>
