--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										<h2><a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale">Big Mart Sale <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale" class="image fit"><img src="images/BigMartSale.png.jpg" alt="" /></a>
+									<a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale" class="image fit"><img src="images/BigMartSale.png" alt="" /></a>
 									<p> Employed the Machine Learning Scikit-learn library to perform model selection, and identified key features influencing sales.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale" class="button">VIEW PROJECT</a></li>
