--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/cassia1102/FlightDelayPrediction">Flight Delay Prediction<br />
+										<h2><a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction"> Weather-Prediction <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/cassia1102/FlightDelayPrediction" class="image fit"><img src="images/flight_delay.jpg" alt="" /></a>
-									<p> Implement machine learning algorithms such as Random Forest, Decision Tree, Logistic Regression, Linear Support Vector Machine, and Gradient-Boosted Tree Classifier for flight delay prediction during Covid-19.</p>
+									<a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="image fit"><img src="images/flight_delay.jpg" alt="" /></a>
+									<p> Explored the Random Forest machine learning algorithm to predict the weather, specifically the temperature</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/cassia1102/FlightDelayPrediction" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
