--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 										<h2><a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction"> Weather-Prediction <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="image fit"><img src="images/flight_delay.jpg" alt="" /></a>
+									<a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="image fit"><img src="images/WeatherPrediction.png" alt="" /></a>
 									<p> Explored the Random Forest machine learning algorithm to predict the weather, specifically the temperature</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="button">VIEW PROJECT</a></li>
