--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/cassia1102/MusicRecommenderSystem">Music Recommendation System<br />
+										<h2><a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition"> Handwritten Digit Recognition <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/cassia1102/MusicRecommenderSystem" class="image fit"><img src="images/music.jpg" alt="" /></a>
-									<p>Building a music recommendation system to personalize content and identify relevant data for audiences. .</p>
+									<a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition" class="image fit"><img src="images/HandWriting.png" alt="" /></a>
+									<p>Worked on the Python deep learning algorithm Convolutional Neural Networks (CNN) to build a handwritten digit recognition model using the MNIST dataset.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/cassia1102/MusicRecommenderSystem" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 							</section>
