--- a/index.html
+++ b/index.html
@@ -175,22 +175,22 @@
 							<section class="alt">
 								<h3>Location</h3>
 								<p><br />
-								East Brunswick, NJ 08816-3238</p>
+								Denver, Colorado, 80027</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(732) 371-6304</a></p>
+								<p><a href="#"> +1 9794366311</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">cassiading@gmail.com</a></p>
+								<p><a href="#">pingzhang@mines.edu</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
 									
-									<li><a href="https://www.linkedin.com/in/juan-cassia-guo-08190a140/" class="icon brands alt fa-linkedin"><span class="label">linkeDIn</span></a></li>
-									<li><a href="https://github.com/cassia1102" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ping-zhang-3aba64266/" class="icon brands alt fa-linkedin"><span class="label">linkeDIn</span></a></li>
+									<li><a href="https://github.com/pingzhang1004" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
