--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/ClueGame" class="image fit"><img src="images/ClueGame.jpg" alt="" /></a>
-									<p>Developed a clue game using Java, following the SOLID Principles of Object-Oriented design, and utilized the Unified Modeling Language (UML) to clarify and display the software design.</p>
+									<p> Developed a clue game using Java, following the SOLID Principles of Object-Oriented design, and utilized the Unified Modeling Language (UML) to clarify and display the software design.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/ClueGame" class="button">VIEW PROJECT</a></li>
 									</ul>
@@ -103,7 +103,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze" class="image fit"><img src="images/MadMaze.png" alt="" /></a>
-									<p> Modeled a compesity maze problem as a graph and use Breadth First Search(BFS) to find the shortest path on the graph using Python.</p>
+									<p> Modeled a complex maze problem as a graph and used Breadth First Search (BFS) to find the shortest path on the graph using Python</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/CSCI-406-Graph-Mad-Maze" class="button">VIEW PROJECTS</a></li>
 									</ul>
@@ -115,7 +115,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/CSCI406-DP-Timber-Problem" class="image fit"><img src="images/DynamicProgramming.png" alt="" /></a>
-									<p> Implemented a dynamic programming algorithm to compute the maximum sum of lengths of wood that can be achieved by a strategy.</p>
+									<p> Implemented a dynamic programming algorithm using Python to compute the maximum sum of the lengths of wood that can be achieved using a particular strategy.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/CSCI406-DP-Timber-Problem" class="button">VIEW PROJECT</a></li>
 									</ul>
@@ -127,7 +127,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale" class="image fit"><img src="images/BigMartSale.png" alt="" /></a>
-									<p> Employed the Machine Learning Scikit-learn library to perform model selection, and identified key features influencing sales.</p>
+									<p> Utilized Python's Scikit-learn machine learning library to conduct model selection and identify the key features that influence sales.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/DSCI403-Big-Mart-Sale" class="button">VIEW PROJECT</a></li>
 									</ul>
@@ -139,7 +139,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="image fit"><img src="images/WeatherPrediction.png" alt="" /></a>
-									<p> Explored the Random Forest machine learning algorithm to predict the weather, specifically the temperature</p>
+									<p> Explored the Random Forest machine learning algorithm in Python to predict weather, specifically focusing on temperature.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="button">VIEW PROJECT</a></li>
 									</ul>
@@ -151,7 +151,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition" class="image fit"><img src="images/HandWriting.png" alt="" /></a>
-									<p>Worked on the Python deep learning algorithm Convolutional Neural Networks (CNN) to build a handwritten digit recognition model using the MNIST dataset.</p>
+									<p> worked on the Convolutional Neural Networks (CNN) deep learning algorithm to construct a model for handwritten digit recognition using the MNIST dataset, implemented in Python.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition" class="button">VIEW PROJECT</a></li>
 									</ul>
