--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition" class="image fit"><img src="images/HandWriting.png" alt="" /></a>
-									<p> worked on the Convolutional Neural Networks (CNN) deep learning algorithm to construct a model for handwritten digit recognition using the MNIST dataset, implemented in Python.</p>
+									<p> Worked on the Convolutional Neural Networks (CNN) deep learning algorithm to construct a model for handwritten digit recognition using the MNIST dataset, implemented in Python.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition" class="button">VIEW PROJECT</a></li>
 									</ul>
