--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="image fit"><img src="images/WeatherPrediction.png" alt="" /></a>
-									<p> Explored the Random Forest machine learning algorithm in Python to predict weather, specifically focusing on temperature.</p>
+									<p> Explored the supervised Random Forest machine learning algorithm in Python to predict weather, specifically focusing on temperature.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/DSCI403-Weather-Prediction" class="button">VIEW PROJECT</a></li>
 									</ul>
