--- a/index.html
+++ b/index.html
@@ -156,6 +156,18 @@
 										<li><a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
+							        <article>
+									<header>
+										
+										<h2><a href="https://github.com/pingzhang1004/DSCI404-Oral_Presentation"> Oral_Presentation <br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/pingzhang1004/DSCI404-Oral_Presentation" class="image fit"><img src="images/OralPresentation.png" alt="" /></a>
+									<p> Designed well-structured slides using my own understanding to orally present the comprehensive contents of the selected paper in the field Computer Vision of AI with group members.</p>
+									<ul class="actions special">
+										<li><a href=""https://github.com/pingzhang1004/DSCI404-Oral_Presentation" class="button">VIEW PROJECT</a></li>
+									</ul>
+								</article>	
 							</section>
 
 						<!-- Footer -->
