--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							        <article>
 									<header>
 										
-										<h2><a href="https://github.com/pingzhang1004/DSCI404-Oral_Presentation"> Oral_Presentation <br />
+										<h2><a href="https://github.com/pingzhang1004/DSCI404-Oral_Presentation"> Technologic Oral Presentation <br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/DSCI404-Oral_Presentation" class="image fit"><img src="images/OralPresentation.png" alt="" /></a>
