--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 									<a href="https://github.com/pingzhang1004/DSCI404-Oral_Presentation" class="image fit"><img src="images/OralPresentation.png" alt="" /></a>
 									<p> Designed well-structured slides using my own understanding to orally present the comprehensive contents of the selected paper in the field Computer Vision of AI with group members.</p>
 									<ul class="actions special">
-										<li><a href=""https://github.com/pingzhang1004/DSCI404-Oral_Presentation" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/DSCI404-Oral_Presentation" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>	
 							</section>
