--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/Impact-of-Hurricane-Harvey-Web-App" class="image fit"><img src="images/Harvey.jpg" alt="" /></a>
-									<p> Created a web application using JavaScript, HTML, and CSS to publish hospital information, patient data, hurricane trajectory, and employed the ArcGIS REST API to access published services and build spatial analysis on map.</p>
+									<p> Created a web application using JavaScript, HTML, and CSS to publish hospital information, patient data, hurricane trajectory, and employed ArcGIS REST API to access published services and build spatial analysis on map.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/Impact-of-Hurricane-Harvey-Web-App" class="button">VIEW PROJECT</a></li>
 									</ul>
