--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 						</h1>
 						<p> A Software Engineer professional with hands-on expertise in software development, data analysis, and project mamagement </p>
 						<p> Technical Skills : </p>
-						<p> Languages: Python,Java, C/C++,  JavaScript, HTML, CSS, SQL, C#  </p>
-						<p> Databases: Oracle, Microsoft SQL Server, SQLite, MongoDB </p>
-						<p> Development tools:  React, VS Code, Eclipse IDE, .Net, Node.js, Jupyter Notebook, Git, JUnit </p>
+						<p> Languages: Python,Java, C/C++,  JavaScript, HTML, CSS, SQL, C#, PHP  </p>
+						<p> Databases: MySQL, Oracle, Microsoft SQL Server, SQLite, MongoDB </p>
+						<p> Web technologies: HTML, CSS, Bootstrap, React, Ajax, jQuery, JSON, Apache，AWS </p>
+						<p> Development tools: .Net, VS Code, Eclipse IDE, Jupyter Notebook, Git, Gitlab, JUnit, Docker </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -81,6 +82,17 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="https://github.com/pingzhang1004/CSCI445-Web-App-Game-Store">Game Store Web App<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/pingzhang1004/CSCI445-Web-App-Game-Store" class="image fit"><img src="images/Game_Store_Web_app.png" alt="" /></a>
+									<p> Developed a Client-Server Architecture Game Store web application for online shopping order submissions, product and user management, featuring responsive and accessible layouts.</p>
+									<ul class="actions special">
+										<li><a href=" href="https://github.com/pingzhang1004/CSCI445-Web-App-Game-Store" class="button">VIEW PROJECT</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://github.com/pingzhang1004/Impact-of-Hurricane-Harvey-Web-App">Impact of Hurricane Harvey Web App<br />
