--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 										<h2><a href="https://github.com/pingzhang1004/CSCI445-Web-App-Game-Store">Game Store Web App<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/pingzhang1004/CSCI445-Web-App-Game-Store" class="image fit"><img src="images/Game_Store_Web_app.png" alt="" /></a>
+									<a href="https://github.com/pingzhang1004/CSCI445-Web-App-Game-Store" class="image fit"><img src="images/Game_Store.png" alt="" /></a>
 									<p> Developed a Client-Server Architecture Game Store web application for online shopping order submissions, product and user management, featuring responsive and accessible layouts.</p>
 									<ul class="actions special">
-										<li><a href=" href="https://github.com/pingzhang1004/CSCI445-Web-App-Game-Store" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/CSCI445-Web-App-Game-Store" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
