--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/CSCI575-ML-SVM-and-KNN/tree/main" class="image fit"><img src="images/ML_Algorithm.png" alt="" /></a>
-									<p> Implement the Machine Leaning KNN and SVM algorithms using Python to classify the hyperspectral remote sensing images over Pavia University,and analysis the classification effectiveness using overall accuracy and Kappa coefficient.</p>
+									<p> Implement the Machine Leaning KNN and SVM algorithms using Python to classify the hyperspectral remote sensing images over Pavia University,and analysis the classification effectiveness using overall accuracy and Kappa coefficient.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/pingzhang1004/DSCI403-Handwritten-Digit-Recognition" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/CSCI575-ML-SVM-and-KNN/tree/main" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 							</section>
