--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/CSCI575-ML-SVM-and-KNN/tree/main" class="image fit"><img src="images/ML_Algorithm.png" alt="" /></a>
-									<p> Implement the Machine Leaning KNN and SVM algorithms using Python to classify the hyperspectral remote sensing images over Pavia University,and analysis the classification effectiveness using overall accuracy and Kappa coefficient.</p>
+									<p> Implemented the Machine Leaning KNN and SVM algorithms using Python to classify the hyperspectral remote sensing images over Pavia University,and analysis the classification effectiveness using overall accuracy and Kappa coefficient.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pingzhang1004/CSCI575-ML-SVM-and-KNN/tree/main" class="button">VIEW PROJECT</a></li>
 									</ul>
