--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
 										<li><a href="https://github.com/pingzhang1004/CSCI575-ML-SVM-and-KNN/tree/main" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/pingzhang1004/CSCI-572-Project-WiFi-Behavior"> Analysis of Network Behavior <br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/pingzhang1004/CSCI-572-Project-WiFi-Behavior" class="image fit"><img src="images/network_protocal.png" alt="" /></a>
+									<p> 
+Developed and evaluated network topologies on the NS-3 Platform to investigate and solve terminal issues, analyzing WiFi's MAC protocol and AODV protocol efficiency.</p>
+									<ul class="actions special">
+										<li><a href=""https://github.com/pingzhang1004/CSCI-572-Project-WiFi-Behavior" class="button">VIEW PROJECT</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
