--- a/index.html
+++ b/index.html
@@ -187,10 +187,9 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/pingzhang1004/CSCI-572-Project-WiFi-Behavior" class="image fit"><img src="images/network_protocal.png" alt="" /></a>
-									<p> 
-Developed and evaluated network topologies on the NS-3 Platform to investigate and solve terminal issues, analyzing WiFi's MAC protocol and AODV protocol efficiency.</p>
+									<p> Developed and evaluated network topologies on the NS-3 Platform to investigate and solve terminal issues, analyzing WiFi's MAC protocol and AODV protocol efficiency.</p>
 									<ul class="actions special">
-										<li><a href=""https://github.com/pingzhang1004/CSCI-572-Project-WiFi-Behavior" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/pingzhang1004/CSCI-572-Project-WiFi-Behavior" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 							</section>
